fixed styling on spacing on fractions

--- a/landing-page/size-chart/default/css/styles.less
+++ b/landing-page/size-chart/default/css/styles.less
@@ -783,7 +783,7 @@ section#size-chart-section {
 		font-size: .7em;
 	}
 
-	font-size:9px;
+	font-size:7px;
 }
 //---------------------------------------------------------------
 
